erDiagram
    tenants ||--o| tenant_branding : has
    tenants ||--o| tenant_settings : has
    tenants ||--o{ tenant_subscriptions : has
    tenants ||--o{ equipment_types : defines
    saas_plans ||--o{ tenant_subscriptions : "priced by"
    tenants ||--o{ user_tenant_memberships : has
    users ||--o{ user_tenant_memberships : holds
    users ||--o{ sessions : has
    users ||--o{ mfa_configurations : has
    users ||--o{ verification_tokens : has
    users ||--o{ consent_records : gives
    users ||--o{ impersonation_sessions : "acts as (actor/target)"
    permissions ||--o{ role_permissions : "granted via"
    users ||--o{ user_permission_overrides : "may have"
    tenants ||--o{ user_permission_overrides : scopes

    tenants {
        uuid id PK
        varchar slug UK
        varchar custom_domain UK
        enum status
        varchar default_locale
    }
    users {
        uuid id PK
        varchar email_normalized UK
        enum status
        boolean is_platform_super_admin
    }
    user_tenant_memberships {
        uuid id PK
        uuid tenant_id FK
        uuid user_id FK
        enum role
        uuid carrier_id "set for carrier/driver roles"
        uuid driver_id
    }
    permissions {
        uuid id PK
        varchar key UK "resource:action"
    }
    role_permissions {
        enum role
        uuid permission_id FK
        varchar scope
    }
    user_permission_overrides {
        uuid tenant_id FK
        uuid user_id FK
        uuid permission_id FK
        varchar effect "grant|deny"
    }
    sessions {
        uuid id PK
        uuid user_id FK
        varchar token_hash UK "sha256, opaque"
        uuid active_tenant_id FK
        timestamp expires_at
        timestamp revoked_at
    }
    impersonation_sessions {
        uuid id PK
        uuid actor_user_id FK
        uuid target_user_id FK
        uuid tenant_id FK
        timestamp expires_at "60 min ceiling"
    }
